<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="general">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="insert_request">Введите запрос</string>
    <!-- TODO: team strings -->
    <string name="team_head_name">Команда</string>
    <string name="team_works">Над приложением \nработали</string>
    <string name="team_developer_1">Валентин Вадимович Мальцев</string>
    <string name="team_developer_2">Андрей Александрович Ярыгин</string>
    <string name="team_developer_3">Александр Сергеевич Панкратов</string>
    <string name="team_developer_4">Александр Михайлович Ефремов</string>
    <!-- TODO: favorites strings -->
    <string name="favorite_head_name">Избранное</string>
    <string name="favorite_empty">Список пуст</string>
    <!-- TODO: general strings -->
    <string name="load_list_failure">Не удалось получить \n список</string>
    <string name="no_vacancies">Не удалось получить \n список вакансий</string>
    <string name="no_vacancies_lil">Таких вакансий нет</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="found_count">Найдено %s </string>
    <string name="no_salary">Зарплата не указана</string>
    <string name="filter_workplace">Место работы</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="expected_salary">Ожидаемая зарплата (Руб. по курсу)</string>
    <string name="input_expected_salary">Введите сумму</string>
    <string name="filter_only_with_salary">Не показывать без зарплаты</string>
    <string name="filter_industries">Отрасль</string>
    <string name="accept">Применить</string>
    <string name="clear_filter">Сбросить</string>
    <string name="experience_title">Требуемый опыт</string>
    <string name="filter_select_country">Выбор страны</string>
    <string name="filter_select_region">Выбор региона</string>
    <string name="filter_select_workplace">Выбор места работы</string>
    <string name="input_region">Введите регион</string>
    <string name="industry">Отрасль</string>
    <string name="select">Выбрать</string>
    <string name="area">Регион</string>
    <string name="filter_country">Страна</string>
    <string name="filter_region">Регион</string>
    <string name="NounOne">вакансия</string>
    <string name="NounTwo">вакансии</string>
    <string name="NounThree">вакансий</string>
    <string name="vacancy_description_title">Описание вакансии</string>
    <string name="comment">Комментарий</string>
    <string name="e_mail">E-mail</string>
    <string name="contact_p">Контактное лицо</string>
    <string name="contacts">Контакты</string>
    <string name="vacancy">Вакансия</string>
    <string name="SendingMessage">Отправить письмо...</string>
    <string name="mail_clients_not_installed">Почтовые клиенты не установлены.</string>
    <string name="no_region">Такого региона нет</string>
    <string name="choise_industry">Выбор отрасли</string>
    <string name="input_industry">Введите отрасль</string>
    <string name="delete_vacancy">Вакансия была удалена</string>
    <string name="industri_text">Отрасль</string>
    <string name="favorite_error">не удалось обновить признак избранного. проверьте подключение к сети</string>
    <string name="currency_in_sourse">Валюта в объявлении</string>
</resources>
