<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSecondary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_button"
        app:title="@string/filter_settings">

    </androidx.appcompat.widget.Toolbar>

    <include
        android:id="@+id/llWorkPlace"
        layout="@layout/filter_categoty_element"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:minHeight="@dimen/filter_element_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <include
        android:id="@+id/llIndustries"
        layout="@layout/filter_categoty_element"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/filter_element_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llWorkPlace" />


    <LinearLayout
        android:id="@+id/llSalary"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_corners12"
        android:backgroundTint="@color/LightGrayDay_GrayNight"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llIndustries">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="6dp"
            android:paddingEnd="4dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/tvSalaryHint"
                style="@style/SmallTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/expected_salary"
                android:textColor="@color/salary_hint" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietSalary"
                style="@style/StandartTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/LightGrayDay_GrayNight"
                android:focusable="true"
                android:hint="@string/input_expected_salary"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textColor="@color/BlackUniversal_yp"
                android:textColorHint="@color/GrayDay_WhiteNight"
                android:textCursorDrawable="@drawable/cursor_edit_text"
                tools:text="123" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/ibClear"
            android:layout_width="@dimen/big_size"
            android:layout_height="@dimen/big_size"
            android:layout_marginTop="0.5dp"
            android:backgroundTint="@color/LightGrayDay_GrayNight"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbOnlyWithSalary"
        style="@style/StandartTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:button="@null"
        android:checked="false"
        android:drawableEnd="@drawable/checkbox_selector"
        android:text="@string/filter_only_with_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSalary" />

    <TextView
        android:id="@+id/titleCurrency"
        style="@style/StandartTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_in_sourse"
        android:paddingVertical="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:textColor="@color/BlackDay_WhiteNight"
        app:layout_constraintEnd_toStartOf="@id/spCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbOnlyWithSalary"/>

    <Spinner
        android:id="@+id/spCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        tools:listitem="@layout/currency_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleCurrency"
        app:layout_constraintTop_toBottomOf="@id/cbOnlyWithSalary" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/StandartButton"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:clickable="true"
        android:text="@string/clear_filter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnAccept"
        style="@style/StandartButton"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_weight="0"
        android:text="@string/accept"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>
