<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/WhiteDay_BlackNight"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarText"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/toolbarTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_button"
        app:title="@string/choise_industry"
        app:titleTextColor="@color/BlackDay_WhiteNight" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/choosing_industry_edit_text"
        style="@style/inputTextEditStyleDayNight"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:hint="@string/input_industry"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarText" />

    <ImageView
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_clear"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/choosing_industry_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/choosing_industry_edit_text"
        app:layout_constraintTop_toTopOf="@+id/choosing_industry_edit_text" />

    <ImageView
        android:id="@+id/search_drawable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:src="@drawable/ic_search"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/choosing_industry_edit_text"
        app:layout_constraintEnd_toEndOf="@+id/choosing_industry_edit_text"
        app:layout_constraintTop_toTopOf="@+id/choosing_industry_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industry_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:visibility="visible"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/choose_industry_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosing_industry_edit_text"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_of_industry" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_industry_button"
        style="@style/StandartButton"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:gravity="center"
        android:text="@string/select"
        android:visibility="gone"
        app:backgroundTint="@color/Blue_yp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/Blue_yp"
        android:visibility="gone"
        tools:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/llPlaceholderTrouble"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginVertical="@dimen/dimen_32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarText">

        <ImageView
            android:id="@+id/src"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/state_image_no_internet" />

        <TextView
            android:id="@+id/src_text"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_internet"
            android:textAlignment="center"
            android:textColor="@color/BlackDay_WhiteNight" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
